--- a/tex/grant/main.tex
+++ b/tex/grant/main.tex
@@ -504,11 +504,11 @@ The BioNORAD platform's importance to the national interest of the United States
 \section*{Lay Abstract}
 % 1 page limit
 
-Influenza A viruses have the potential to cause pandemics, and the current global surveillance efforts are insufficient to reliably identify and rank strains with high pandemic potential. The current solution to this problem, the Influenza Risk Assessment Tool (IRAT), is slow and cannot keep up with the scale of global biosurveillance efforts.
+Influenza A viruses have the potential to cause pandemics, and the current global surveillance efforts are insufficient to reliably identify and rank strains with high pandemic potential. The current solution to this problem, the Influenza Risk Assessment Tool (IRAT) by the CDC, is subjective and slow requiring multiple experimental assays,  and cannot keep up with the scale of current global biosurveillance efforts.
 
 To address this challenge, we propose to develop the \bnd  platform to proactively identify the risks posed by emerging Influenza A strains with high pandemic potential. The platform will use novel pattern discovery algorithms to automatically parse emergent evolutionary constraints on Influenza A viruses in the wild, and provide a less-heuristic, theory-backed, experimentally validated, and scalable solution to emergence prediction.
 
-The Emergenet algorithm, which forms the core of the BioNORAD platform, is the first of its kind to learn an appropriate biologically meaningful comparison metric from data, enabling an actionable pandemic early warning system. By reliably estimating the non-heuristic numerical probability of a strain giving rise to another strain in the wild, the platform can preempt strains expected to be in future circulation and approximate IRAT scores of non-human strains without experimental assays or subject matter expert scoring. The Emergenet algorithm learns patterns of cross-dependencies across point mutations to reveal underlying rules of organization of the primary structures of viral proteins. The predictive framework will estimate the odds of a specific mutation arising in the future and consequently the probability of a specific strain spontaneously evolving into another. Additionally, we will validate our core algorithm by experimentally validating that predicted vraiations of observed strains and specific genes in the wild express correctly on host cell surfaces and are functional.
+The Emergenet algorithm, which forms the core of the BioNORAD platform, is the first of its kind to learn an adaptive  biologically meaningful comparison metric from data, enabling an actionable pandemic early warning system. By reliably estimating the non-heuristic numerical probability of a strain giving rise to another strain in the wild, the platform can preempt strains expected to be in future circulation, and approximate IRAT scores of non-human strains without experimental assays or subject matter expert scoring. The Emergenet algorithm learns patterns of cross-dependencies across point mutations to reveal underlying rules of organization of the primary structures of viral proteins. The predictive framework will estimate the odds of a specific mutation arising in the future and consequently the probability of a specific strain spontaneously evolving into another. Additionally, we will validate our core algorithm by experimentally validating that predicted vraiations of observed strains and specific genes in the wild express correctly on host cell surfaces and are functional.
 
 Current surveillance paradigms, while crucial for mapping disease ecosystems, fail to address the challenge of higher edit-similarity between strains not implying a high likelihood of a jump. Efforts at tracking and modeling ecological factors driving up the odds of zoonotic spill-over have not improved our ability to quantify future risk of emergence of a specific strain from a specific host. Recent advances in predicting seasonal epidemic strains do not generalize to predicting emergence events, especially strains that do not yet circulate in humans.
 
